--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
-    <div id="quote-box">
+    <div class="box" id="quote-box">
         <div id="text"></div>
         <div id="author"></div>
         <div id="new-quote"></div>
         <a href="#"></a>
-        
+
     </div>
 
 
