API working with random quotes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
-    <div class="box" id="quote-box">
-        <div id="text"></div>
-        <div id="author"></div>
-        <div id="new-quote"></div>
-        <a href="#"></a>
+    <div class="box" id="quote_box">
+        <p id="text"></p>
+        <h4 id="author"></h4>
+        <button id="new-quote"></button>
+        <a href="#" id="tweet-quote"></a>
 
     </div>
 
