--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
-    <div class="box" id="quote_box">
-        <p id="text"></p>
-        <h4 id="author"></h4>
-        <button id="new-quote"></button>
-        <a href="#" id="tweet-quote"></a>
+    <div class="box" id="quote-box">
+        <h2 id="text"></h2>
+        <p class="author" id="author"></p>
+
+        <div class="lower-box">
+            <a href="www.twitter.com"><i class="fa fa-twitter-square" style="font-size:36px; color: #22a190"></i></a>
+            <button class="new-quote" id="new-quote">New Quote</button>
+        </div>
 
     </div>
 
