quotation task done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quotation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="index.css"/>
 </head>
@@ -14,8 +14,8 @@
         <p class="author" id="author"></p>
 
         <div class="lower-box">
-            <a href="www.twitter.com"><i class="fa fa-twitter-square" style="font-size:36px; color: #22a190"></i></a>
-            <button class="new-quote" id="new-quote">New Quote</button>
+            <a class="a" href="https://twitter.com/home"><i class="fa fa-twitter-square" style="font-size:36px; color: #22a190"></i></a>
+            <button class="new-quote" id="new-quote">Quotation of  The Day!</button>
         </div>
 
     </div>
