Quote machine working

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
     <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
-    <div class="box" id="quote-box">
-        <h2 id="text"></h2>
-        <p class="author" id="author"></p>
-
-        <div class="lower-box">
-            <a class="a" href="https://twitter.com/home"><i class="fa fa-twitter-square" style="font-size:36px; color: #22a190"></i></a>
-            <button class="new-quote" id="new-quote">Quotation of  The Day!</button>
+  
+        <div class="box" id="quote-box">
+            <h2 id="text"></h2>
+            <p class="author" id="author"></p>
+    
+            <div class="lower-box">
+                <a class="a" href="https://twitter.com/home"><i class="fa fa-twitter-square" style="font-size:36px; color: #22a190"></i></a>
+                <button class="new-quote" id="new-quote">Quotation of  The Day!</button>
+               
+            </div>
         </div>
-
-    </div>
-
+        <p class="tag"><b>By Rajat Soni</b></p>
+   
 
     <script src="index.js"></script>
 </body>
